force-app/main/default/objects/Heuristic_Duplicate_Group__c/Heuristic_Duplicate_Group__c.object-meta.xml
<CustomObject>
  <label>Heuristic Duplicate Group</label>
  <nameField>
    <displayFormat>HDG-{000000}</displayFormat>
    <label>Group Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Heuristic Duplicate Groups</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>