force-app/main/default/objects/Heuristic_Duplicate_Group__c/fields/Group_Key__c.field-meta.xml
<CustomField>
  <fullName>Group_Key__c</fullName>
  <label>Group Key</label>
  <length>80</length>
  <type>Text</type>
</CustomField>