force-app/main/default/objects/Heuristic_Duplicate_Group__c/fields/Record_Count__c.field-meta.xml
<CustomField>
  <fullName>Record_Count__c</fullName>
  <label>Record Count</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>