force-app/main/default/objects/Heuristic_Duplicate_Group__c/fields/Summary__c.field-meta.xml
<CustomField>
  <fullName>Summary__c</fullName>
  <label>Summary</label>
  <length>1000</length>
  <type>LongTextArea</type>
</CustomField>