force-app/main/default/objects/Heuristic_Duplicate_Group__c/fields/Top_Score__c.field-meta.xml
<CustomField>
  <fullName>Top_Score__c</fullName>
  <label>Top Score</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>